--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,315 @@
+@import "https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css";
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
+  background-color: rgb(234, 221, 248);
+  padding: 100;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+  vertical-align: middle;
+}
+
+button {
+  background-color: rgb(245, 200, 243);
+  color:rgb(0, 0, 0);
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  justify-content: center;
+  align-items: center;
 }
 
-* {
+input {
+  all: unset;
+  border-color: whitesmoke;
   box-sizing: border-box;
+  appearance: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form{
+  width: 100%;
+}
+
+.navigation{
+  color:rgb(24, 14, 109);
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer{
+  width: 100%;
+  height: 80px;
+  bottom: 10px;
+  position: absolute;
+}
+
+.todolist-input::placeholder{
+  color: white;
+  opacity: 0.9;
+}
+
+.container{
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.formInput{
+  width: 100%;
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: 1px solid rgb(124, 161, 240);
+  text-align: center;
+  background-color:rgb(205, 231, 255);
+  color: black;
+}
+
+.formBtn{
+  cursor:pointer;
+  width:100%;
+  padding: 7px 20px;
+  text-align: center;
+  color: white;
+  border-radius: 20px;
+  background-color: rgb(123, 161, 233);
+}
+
+.cancelBtn{
+  cursor: pointer;
+  background-color: tomato;
+}
+
+/* Profile Page */
+.logOut{
+  margin-top: 50px;
+}
+
+/* Todolist Factory */
+.factoryForm{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.factoryInput_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.factoryInput_input {
+  flex-grow: 1;
+  height: 40px;
+  padding: 0px 20px;
+  color: rgb(0, 0, 0);
+  border: 1px solid #04aaff;
+  border-radius: 20px;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.factoryInput_arrow {
+  position: absolute;
+  right: 0;
+  background-color: #7ecef7;
+  height: 40px;
+  width: 40px;
+  padding: 10px 0px;
+  text-align: center;
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+}
+
+.factoryInput_label {
+  color: #12146d;
+  cursor: pointer;
+}
+
+.factoryInput_label span {
+  margin-right: 10px;
+  font-size: 12px;
+  text-align: center;
+}
+
+.factoryForm_attachment {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.factoryForm_attachment img {
+  height: 80px;
+  width: 80px;
+  border-radius: 40px;
+}
+
+.factoryForm_clear {
+  color: #70c1e9;
+  cursor: pointer;
+  text-align: center;
+}
+
+.factoryForm_clear span {
+  margin-right: 10px;
+  font-size: 12px;
+}
+
+/*TodoList*/
+.todolistEdit .formBtn {
+  cursor: pointer;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.todolist {
+  margin-bottom: 20px;
+  background-color: rgb(64, 56, 100);
+  width: 100%;
+  max-width: 320px;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.todolist h4 {
+  font-size: 20px;
+}
+
+.todolist img {
+  right: -10px;
+  top: 20px;
+  position: absolute;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
+}
+
+.todolist_actions {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.todolist_actions span {
+  cursor: pointer;
+}
+
+.todolist_actions span:first-child {
+  margin-right: 10px;
+}
+
+/* Auth */
+
+.authContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.authBtns {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 320px;
+}
+
+.authBtn {
+  cursor: pointer;
+  border-radius: 20px;
+  border: none;
+  padding: 10px 0px;
+  font-size: 12px;
+  text-align: center;
+  width: 150px;
+  background: white;
+  cursor: pointer;
+}
+
+/* AuthForm */
+
+.authInput {
+  max-width: 320px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 30px;
+  background-color: rgb(255, 255, 255);
+  margin-bottom: 10px;
+  font-size: 12px;
+  color: black;
+}
+
+.authSubmit {
+  text-align: center;
+  background: #04aaff;
+  color: white;
+  margin-top: 10;
+  cursor: pointer;
+}
+
+.authError {
+  color: tomato;
+  text-align: center;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.authSwitch {
+  color: #04aaff;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  display: block;
+  font-size: 12px;
+  text-decoration: underline;
+}
+
+/* Comment */
+.comment {
+  margin-bottom: 20px;
+  background-color: rgb(114, 72, 124);
+  width: 100%;
+  max-width: 320px;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.comment h4 {
+  font-size: 14px;
 }
